--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -7,7 +7,7 @@
 /* @import must be at top of file, otherwise CSS will not work */
 /* @import url('//hello.myfonts.net/count/426563'); */
 
-$font-stack-default: 'Roboto', 'Arial', 'Helvetica', sans-serif;
+$font-stack-default: 'Hanken Grotesk', sans-serif;
 $font-stack-heading: 'Hanken Grotesk', sans-serif; 
 
 
