--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -12,14 +12,14 @@
 	height: 60px;
 	display: flex;
 	flex-flow: row;
-	margin-top: 1rem;
+	margin-top: 1.1rem;
 	// justify-content: space-between;
 }
 
 
 .c-header-logo {
 	position: absolute;
-	width: 200px;
+	width: 15rem;
 	height: 40px;
 }
 
