--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -75,9 +75,9 @@ h3,
 }
 
 .c-lead {
-    line-height: 1.33;
-	font-size: 1.33rem;
-    font-size: var(--font-size-lead);
+    line-height: 1.25;
+	font-size: 1.8rem;
+    // font-size: var(--font-size-lead);
     text-wrap:balance;
 }
 
