--- a/src/styles/components/_contentelements.scss
+++ b/src/styles/components/_contentelements.scss
@@ -42,11 +42,19 @@
     padding: 0.5em 0.5em 0 0;
 }
 
-
+.c-img-wide{
+    display: flex;
+    justify-content: center;
+    figure{
+        width: 50%
+    }
+}
 
 .c-news-item{
 
-    margin-bottom: 4rem;
+    margin-bottom: 0.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
     // color: $bg-light;
     // color: var(--bg-light);
 
