--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -235,6 +235,15 @@ h3,
         --font-size-body: 1rem;
         --font-size-body-s: 0.875rem;
     }
+
+	.c-lead {
+		font-size: 1.5rem;
+	}
+
+	.c-footer a{
+		font-size: 1.5rem;
+	}
+
 }
 
 
