--- a/src/styles/components/_contentelements.scss
+++ b/src/styles/components/_contentelements.scss
@@ -52,7 +52,7 @@
 
 .c-news-item{
 
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     // color: $bg-light;
@@ -79,6 +79,25 @@
         color: var(--text-color );
         opacity: 0.8;
     }
+
+    figure {
+        width: 100%;          /* fill the column */
+        aspect-ratio: 1 / 1;  /* force square */
+        overflow: hidden;     /* hide overflow if image is bigger */
+        margin: 0;
+    }
+
+    figure img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;    /* crop and fill the square */
+        display: block;
+    }
+
+}
+
+.c-row-center{
+    justify-content: center;
 }
 
 .hover-switch {
@@ -120,4 +139,10 @@
         flex: 0 0 100%;
         max-width: 100%;   
     }
+
+    .c-img-center{
+        padding-bottom: 5rem;
+        padding-top: 2rem;
+    }
+
 }
